fixed alignment in chrome

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -47,10 +47,10 @@ body {
 
 #control-panel {
   background: white;
-  max-width: 370px;
+  width: 370px;
   position: absolute;
   z-index: 1000;
-  padding: 20px;
+  padding: 0px;
 }
 
 h3 {
@@ -58,8 +58,12 @@ h3 {
   margin-bottom: 10px;
 }
 
-div.text {
-  padding-top: 8px;
+.go-left {
+  text-align: left;
+}
+
+label{
+  font-size: 16px;
 }
 
 #angle canvas{
@@ -73,8 +77,9 @@ div.text {
 }
 
 .arrow img {
-  margin-top: 3px;
-  width: 25px;
+  width: 15px;
+  margin-bottom: 3px;
+  margin-left: 5px;
 }
 
 #angle-num img {
